--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -49,3 +49,21 @@ content p.desc {
     font-size: 16px;
     color: #4a4a4a
 }
+
+.remove {
+    width: 100px;
+    height: 30px;
+    padding: 5px;
+    background-color: rgb(233, 76, 76);
+    color: white;
+    border: 0;
+}
+
+.update {
+    width: 100px;
+    height: 30px;
+    padding: 5px;
+    background-color: rgb(233, 223, 76);
+    color: white;
+    border: 0;
+}
