--- a/src/containers/Product/Product.css
+++ b/src/containers/Product/Product.css
@@ -4,98 +4,24 @@
 }
 
 .product {
-    width: 100%;
+    clear: both;
+    width: 300px;
     height: auto;
+    margin: 20px;
 }
 
 header {
-    width: 100%;
-    height: 60px;
-    background-color: #ed7801;
-    color: white;
-    line-height: 30px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    position: fixed;
-}
-
-.brand {
-    margin-left: 20px;
-}
-
-.cart-head {
-    margin-right: 20px;
+    background-color: rgb(236, 207, 42);
+    padding: 20px;
+    color: white;
 }
 
 .countCart {
-    margin: 5px;
-    display: inline-block;
+    padding: 5px;
     background-color: white;
-    border-radius: 100%;
     color: black;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.card {
-    width: 400px;
-    height: auto;
-    padding: 20px;
-    margin:auto;
-    text-align: center;
-    padding-top: 100px;
-}
-
-.card img{
-    width: 400px;
-}
-
-.child_card {
-    display: flex;
-    justify-content: space-between;
-}
-
-.input_card {
-    padding: 8px;
-    background-color: rgb(245, 245, 255);
-    color: rgb(24, 24, 24);
-    font-weight: bold;
-    font-size: 16px;
-    width: 30px;
-    outline: none;
-    border: 1 solid rgb(158, 158, 158);
-    text-align: center;
-}
-
-.btn_card {
-    width: 30px;
-    padding: 10px;
-    background-color: #ed7801;
-    color: white;
-    font-weight: bold;
-    font-size: 16px;
-    outline: none;
-    border: 0;
-}
-
-.cart {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(238, 237, 237);
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.cart-total {
-    padding-left: 50px;
-}
-
-.cart-action {
-    padding-right: 50px;
+    margin-left: 10px;
+    border-radius: 100px;
 }
